--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
     },
     "require": {
         "php" : "~7.1",
-        "symfony/console": "~2.3|~3.0",
-        "symfony/filesystem": "~2.3|~3.0",
-        "symfony/process": "~2.3|~3.0"
+        "symfony/console": "~2.3|~3.0|~4.0",
+        "symfony/filesystem": "~2.3|~3.0|~4.0",
+        "symfony/process": "~2.3|~3.0|~4.0"
     },
     "bin": [
         "php-package-creator"
