--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         }
     },
     "require": {
-        "php" : "~7.1",
-        "symfony/console": "~2.3|~3.0|~4.0",
-        "symfony/filesystem": "~2.3|~3.0|~4.0",
-        "symfony/process": "~2.3|~3.0|~4.0"
+        "php": ">=7.3",
+        "symfony/console": "~2.3|~3.0|~4.0|~5.0|~6.0",
+        "symfony/filesystem": "~2.3|~3.0|~4.0|~5.0|~6.0",
+        "symfony/process": "~2.3|~3.0|~4.0|~5.0|~6.0"
     },
     "bin": [
         "php-package-creator"
